--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  text_to_speech: ^0.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,6 +62,7 @@ flutter:
     - assets/
     - assets/learn/
     - assets/multiple_choice/
+    - assets/put_in_order/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
