--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   text_to_speech: ^0.2.3
+  custom_pop_up_menu: ^1.2.4
+  speech_to_text: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +65,7 @@ flutter:
     - assets/learn/
     - assets/multiple_choice/
     - assets/put_in_order/
+    - assets/listen_talk/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
